fix: don't mess with autoflow on mobile search page (#1590)
Also tweaks the z-index of the bottom nav to make sure that it remains
underneath all of the top nav content (i.e. hamburger menu) while also
preventing box-shadows from various modals from bleeding out over the
bottom nav.

--- a/assets/css/_nav.scss
+++ b/assets/css/_nav.scss
@@ -37,7 +37,7 @@
 
 .m-nav__nav-bar--bottom {
   grid-area: bottom;
-  z-index: 1000;
+  z-index: 1099;
 }
 
 .m-nav__app-content {
